# xviewer-cmake

./: CMakeLists.txt  README.md  main.cpp  resource.h  xcalendar.cpp  xcalendar.h  xcamera_config.cpp  xcamera_config.h  xcamera_record.cpp  xcamera_record.h  xcamera_widget.cpp  xcamera_widget.h  xplayvideo.cpp  xplayvideo.h  xplayvideo.ui  xviewer.aps  xviewer.cpp  xviewer.h  xviewer.rc  xviewer.ui
xcodec-cmake/: CMakeLists.txt  LICENSE  README.md  xcodec.cpp  xcodec.h  xdecode.cpp  xdecode.h  xdecode_task.cpp  xdecode_task.h  xdemux.cpp  xdemux.h  xdemux_task.cpp  xdemux_task.h  xencode.cpp  xencode.h  xformat.cpp  xformat.h  xmux.cpp  xmux.h  xmux_task.cpp  xmux_task.h  xsdl.cpp  xsdl.h  xtools.cpp  xtools.h  xvideo_view.cpp  xvideo_view.h
